[FEAT] Adding the go sdk & cli, updating docs

--- a/sdk/ts/web/package.json
+++ b/sdk/ts/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@promptspec/web",
+  "name": "@specform/web",
   "version": "0.1.0",
   "type": "module",
   "main": "dist/index.js",
@@ -9,7 +9,7 @@
     }
   },
   "dependencies": {
-    "@promptspec/core": "workspace:*"
+    "@specform/core": "workspace:*"
   },
   "scripts": {
     "test": "vitest run",
