--- a/sdk/ts/node/package.json
+++ b/sdk/ts/node/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "type": "module",
   "main": "dist/index.js",
+  "license": "Apache-2.0",
   "exports": {
     ".": {
       "import": "./dist/index.js"
